Editando botão de voltar para Ocorrencias

--- a/src/app/pages/ocorrencias/ocorrencias.component.html
+++ b/src/app/pages/ocorrencias/ocorrencias.component.html
@@ -54,8 +54,8 @@
       <textarea formControlName="descricao" id="descricao" rows="4"></textarea>
     </div>
     <div class="form-group">
+      <button (click)="mudarParaViewOcorrencias()" class="btn-return"><i class="fa-solid fa-backward"></i></button>
       <button class="btn-cadastro-ocorrencias" type="submit">Cadastrar Ocorrência</button>
-      <button (click)="mudarParaViewOcorrencias()" class="btn-return"> Voltar para visualização </button>
     </div>
   </form>
 </div>
