--- a/src/app/pages/ocorrencias/ocorrencias.component.css
+++ b/src/app/pages/ocorrencias/ocorrencias.component.css
@@ -119,7 +119,6 @@ textarea {
 .btn-cadastro-ocorrencias,
 .btn-return {
   font-weight: bolder;
-  width: 100%;
   border: none;
   padding: 10px 15px;
   border-radius: 5px;
@@ -134,5 +133,5 @@ textarea {
   background-color: #e1e1e1;
   box-shadow: 1px 1px 5px 0px #0000004f;
   color: #0c0b0bcc;
-  margin-top: 1em;
+  margin-right: 1em;
 }
